--- a/.github/workflows/branches.yaml
+++ b/.github/workflows/branches.yaml
@@ -25,11 +25,11 @@ jobs:
           go-version-file: ./go.mod
       - run: make test
 
-#  cover:
-#    runs-on: ubuntu-latest
-#    steps:
-#      - uses: actions/checkout@v4.1.1
-#      - uses: actions/setup-go@v5
-#        with:
-#          go-version-file: ./go.mod
-#      - run: make cover
+  cover:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4.1.1
+      - uses: actions/setup-go@v5
+        with:
+          go-version-file: ./go.mod
+      - run: make cover
